--- a/Client/angular/src/app/components/not-found/not-found.component.html
+++ b/Client/angular/src/app/components/not-found/not-found.component.html
@@ -1,10 +1,13 @@
-<div class="section">
-  <header class="error-header">
-    <h1>404 - Page Not Found</h1>
-  </header>
+<app-menu></app-menu>
+<main>
+  <div class="section">
+    <header class="error-header">
+      <h1>404 - Page Not Found</h1>
+    </header>
 
-  <main>
-    <p class="error-message">Sorry, the page you are looking for does not exist.</p>
-    <a routerLink="/">Go to Home</a>
-  </main>
-</div>
+    <main>
+      <p class="error-message">Sorry, the page you are looking for does not exist.</p>
+      <a routerLink="/">Go to Home</a>
+    </main>
+  </div>
+</main>
