--- a/Client/angular/src/app/components/notes/notes.component.html
+++ b/Client/angular/src/app/components/notes/notes.component.html
@@ -1,26 +1,68 @@
-<div class="section">
-  <header>
-    <h1>Sci-Fi Book List</h1>
-    <p class="description">
-      This component uses a service to fetch books from a mocked server. It is designed to test the Bearer Interceptor
-      feature.<br />
-      Open the developer tools in your browser and inspect the request to
-      <code>http://localhost:8181/books</code>. The request should include the <code>Authorization</code> header with
-      the Bearer token.
-    </p>
-  </header>
+<app-menu [isSearch]="true"
+          (searchChange)="searchChange($event)"
+          (typeChange)="typeChange($event)"
+          (tagsChange)="tagsChange($event)">
+</app-menu>
+<main>
+  <div class="notes">
+    @let loadNote = notes | async;
+    @if (loadNote !== null) {
+      <mat-card>
+        <mat-card-content>
+          <fa-icon [icon]="faPlus"></fa-icon>
+        </mat-card-content>
+      </mat-card>
+      @for (note of loadNote.items; track note.path) {
+        <mat-card>
+          <mat-card-header>
+            <div class="note-eye">
+              @if (note.is_public) {
+                <fa-icon [icon]="faEye"></fa-icon>
+              } @else {
+                <fa-icon [icon]="faEyeSlash"></fa-icon>
+              }
+            </div>
+          </mat-card-header>
+          <mat-card-title>{{ note.title }}</mat-card-title>
+          <mat-card-content>{{ note.description }}</mat-card-content>
+          <mat-card-footer>
+            <div class="note-description"></div>
+            @if (note.tags.length != 0) {
+              @let tags = note.tags.slice(0, TagQuantity);
+              @let sub = note.tags.length - TagQuantity;
+              <div class="note-tag-list">
+                <fa-icon [icon]="faTag"></fa-icon>
+                @for (tag of tags; track tag.name) {
+                  <span class="note-tag-item">#{{ tag.name }}</span>
+                }
+                @if (sub > 0) {
+                  @let tagsOther = note.tags.slice(TagQuantity, note.tags.length);
+                  <span class="note-tag-more">+{{ sub }} more</span>
+                  <details>
+                    <summary></summary>
+                    @for (tag of tagsOther; track tag.name) {
+                      <span class="note-tag-item">#{{ tag.name }}</span>
+                    }
+                  </details>
 
-  <main>
-    @if (notes.length === 0) {
-      <p class="no-books">No books found. Did you start the <code>example-server</code> project?</p>
-    } @else {
-      <ul class="book-list">
-        @for (note of notes; track note.path) {
-          <li class="book-item">
-            <strong>{{ note.title }}</strong> by {{ note.owner_account_name }} ()
-          </li>
-        }
-      </ul>
+                }
+              </div>
+            }
+            <div><span><fa-icon [icon]="faUser"></fa-icon>
+              {{ note.owner_account_name }}</span>·<span></span><span><fa-icon [icon]="faClock"></fa-icon>
+              {{ note.createdAtText }}</span></div>
+            <a href="note/{{note.path}}">Go</a>
+          </mat-card-footer>
+        </mat-card>
+      }
+      <app-pagination
+        [pageData]="loadNote"
+        (pageChanged)="updatePage($event)"
+      ></app-pagination>
     }
-  </main>
-</div>
+    <details>
+      <summary></summary>
+      <app-note-form></app-note-form>
+    </details>
+  </div>
+</main>
