--- a/Client/angular/src/app/components/forbidden/forbidden.component.html
+++ b/Client/angular/src/app/components/forbidden/forbidden.component.html
@@ -1,4 +1,6 @@
-<app-menu></app-menu>
+<header>
+  <app-menu></app-menu>
+</header>
 <main>
   <div class="section">
     <header>
@@ -11,3 +13,6 @@
     </main>
   </div>
 </main>
+<footer>
+  <app-footer></app-footer>
+</footer>
