--- a/Client/angular/src/app/components/not-found/not-found.component.html
+++ b/Client/angular/src/app/components/not-found/not-found.component.html
@@ -1,4 +1,7 @@
-<app-menu></app-menu>
+<header>
+  <app-menu></app-menu>
+</header>
+
 <main>
   <div class="section">
     <header class="error-header">
@@ -11,3 +14,6 @@
     </main>
   </div>
 </main>
+<footer>
+  <app-footer></app-footer>
+</footer>
