--- a/Client/angular/src/app/components/copy/copy.component.html
+++ b/Client/angular/src/app/components/copy/copy.component.html
@@ -1,8 +1,4 @@
-﻿<div class="copy-link-wrapper">
-  <button (click)="copyToClipboard()" class="icon-button">
-    <fa-icon [icon]="icon" class="link-icon"></fa-icon>
-  </button>
-  <div *ngIf="showCopiedAlert" class="copied-alert">
-    Link copied!
-  </div>
-</div>
+﻿<button (click)="copyToClipboard()"
+        class="icon-button">
+  <fa-icon [icon]="icon" class="link-icon"></fa-icon>
+</button>
