--- a/Client/angular/src/app/components/user-profile/user-profile.component.html
+++ b/Client/angular/src/app/components/user-profile/user-profile.component.html
@@ -1,4 +1,6 @@
-<app-menu></app-menu>
+<header>
+  <app-menu></app-menu>
+</header>
 <main>
   <div class="section">
     <header>
@@ -19,3 +21,6 @@
     </main>
   </div>
 </main>
+<footer>
+  <app-footer></app-footer>
+</footer>
