--- a/Client/angular/src/style.scss
+++ b/Client/angular/src/style.scss
@@ -1,4 +1,5 @@
 ﻿@use '@angular/material' as mat;
+@use "colors" as c;
 
 html {
   color-scheme: light dark;
@@ -7,6 +8,27 @@ html {
     typography: Roboto,
     density: 0
   ));
+}
+
+blockquote {
+  border-left: 3px solid c.$text1;
+  padding-left: 12px;
+  color: c.$text2;
+}
+
+main {
+  color: c.$text1;
+}
+
+code {
+  background-color: c.$text3;
+  border-radius: 6px;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+footer {
+  background-color: c.$background1;
 }
 
 //
